k8s/session-jm-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: flink-standalone-session
  name: session-jm-service
spec:
  type: ClusterIP
  ports:
  - name: rpc
    port: 6123
  - name: blob
    port: 6124
  - name: ui
    port: 8081
  selector:
    app: flink
    component: jobmanager
