k8s/flink-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "traefik" # 从nginx修改traefik
  name: flink-dashboard
  namespace: flink-standalone-session
spec:
  rules:
  - host: flinkonk8s.console.lab.io
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  session-jm-service
                port:
                  number: 8081
  tls:
    - secretName: flinkonk8s.console.lab.io
