k8s/flink-ingress1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flink-dashboard
  namespace: flink-standalone-session
spec:
  ingressClassName: nginx
  rules:
    - host: flinkonk8s.console.lab.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: session-jm-service
                port:
                  number: 8081
